--- a/project/index.html
+++ b/project/index.html
@@ -2,7 +2,7 @@
 <html lang="ta">
   <head>
     <meta charset="UTF-8" />
-    <title>Tamil Voice Schemes</title>
+    <title>Tamil Voice  Schemes </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Bootstrap CSS -->
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
 
-    <!-- Custom styles -->
+    <!-- Link to external CSS -->
     <link rel="stylesheet" href="styles.css" />
 
     <!-- React & Babel -->
@@ -27,34 +27,28 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <script type="text/babel">
-      const TOGETHER_API_KEY = "103a7289888c3de65bede92e1f8a3806a057b72a0c552825669901d4819e0d4b";
+      const SAMBANOVA_KEY = "b83fd8b0-19ea-4af6-bb47-16587ceb3c0a";
 
       function VoiceChat() {
         const [userText, setUserText] = React.useState("");
-        const [messages, setMessages] = React.useState([]);
+        const [aiResponse, setAiResponse] = React.useState("🤖 AI பதில் காத்திருக்கிறது...");
         const [isRecording, setIsRecording] = React.useState(false);
         const [recordingText, setRecordingText] = React.useState("");
 
-        const addMessage = (sender, text) => {
-          setMessages((prev) => [...prev, { sender, text }]);
-        };
-
+        // Sends the input text to the API and sets the AI response.
         const handleTextSubmit = async (text) => {
           const query = text || userText;
           if (!query.trim()) return;
-
-          addMessage("🧑", query);
-          setUserText("");
-          addMessage("🤖", "⏳ பதிலை பெற முயற்சிக்கிறது...");
-
-          const response = await fetch("https://api.together.xyz/v1/chat/completions", {
+          setAiResponse("⏳ பதிலை பெற முயற்சிக்கிறது...");
+          const result = await fetch("https://api.sambanova.ai/v1/chat/completions", {
             method: "POST",
             headers: {
-              "Authorization": `Bearer ${TOGETHER_API_KEY}`,
+              Authorization: `Bearer ${SAMBANOVA_KEY}`,
               "Content-Type": "application/json",
             },
             body: JSON.stringify({
-              model: "deepseek-ai/DeepSeek-V3",
+              stream: false,
+              model: "DeepSeek-V3-0324",
               messages: [
                 {
                   role: "system",
@@ -65,21 +59,19 @@
               ],
             }),
           });
-
-          const data = await response.json();
-          const responseText =
-            data.choices && data.choices.length > 0
-              ? data.choices[0].message.content.replace(/[^\u0B80-\u0BFF\s]/g, "").trim()
-              : "❌ பதிலை பெற முடியவில்லை.";
-
-          // Remove placeholder and add real response
-          setMessages((prev) =>
-            [...prev.slice(0, -1), { sender: "🤖", text: responseText }]
-          );
-
-          speakTamil(responseText);
+          const data = await result.json();
+          if (data.choices && data.choices.length > 0) {
+            const responseText = data.choices[0].message.content
+              .replace(/[^\u0B80-\u0BFF\s]/g, "")
+              .trim();
+            setAiResponse("🤖 AI பதில்: " + responseText);
+            speakTamil(responseText);
+          } else {
+            setAiResponse("❌ பதிலை பெற முடியவில்லை.");
+          }
         };
 
+        // Uses speechSynthesis to speak the AI response.
         const speakTamil = (text) => {
           if ("speechSynthesis" in window) {
             const voices = window.speechSynthesis.getVoices();
@@ -95,6 +87,7 @@
           }
         };
 
+        // Starts speech recognition which automatically stops when speech finishes.
         const startVoiceRecognition = () => {
           const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
           if (!SpeechRecognition) {
@@ -108,15 +101,16 @@
           recognition.lang = "ta-IN";
           recognition.interimResults = false;
           recognition.maxAlternatives = 1;
-          recognition.continuous = false;
+          recognition.continuous = false;  // Auto-stops after speech finishes
 
           recognition.onresult = (event) => {
             const transcript = event.results[0][0].transcript;
             setUserText(transcript);
-            handleTextSubmit(transcript);
+            handleTextSubmit(transcript); // Auto-send to AI after speech ends
           };
 
           recognition.onerror = (event) => {
+            setAiResponse("❌ உரையை அடையாளம் காண இயலவில்லை.");
             console.error("Speech recognition error:", event.error);
           };
 
@@ -138,16 +132,14 @@
               onChange={(e) => setUserText(e.target.value)}
             />
             <div className="button-group">
-              <button onClick={() => handleTextSubmit()}>📤 அனுப்பு</button>
+              <button onClick={() => handleTextSubmit()}>📝 பதில் பெற</button>
               <button onClick={startVoiceRecognition} disabled={isRecording}>
                 🎙️ பதிவு செய்
               </button>
             </div>
             {recordingText && <div className="recording-text">{recordingText}</div>}
-            <div className="response-box mt-3">
-              {messages.map((msg, index) => (
-                <p key={index}><strong>{msg.sender}</strong>: {msg.text}</p>
-              ))}
+            <div className="response-box">
+              <p>{aiResponse}</p>
             </div>
           </div>
         );
@@ -185,18 +177,3 @@
           </div>
         );
       }
-
-      function App() {
-        return (
-          <div>
-            <VoiceChat />
-            <hr />
-            <SchemeGrid />
-          </div>
-        );
-      }
-
-      ReactDOM.createRoot(document.getElementById("root")).render(<App />);
-    </script>
-  </body>
-</html>
