--- a/project/index.html
+++ b/project/index.html
@@ -1,158 +1,194 @@
 <!DOCTYPE html>
 <html lang="ta">
-<head>
-  <meta charset="UTF-8">
-  <title>Tamil Voice AI Chat</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 20px;
-      background: #f2f2f2;
-    }
-    h1 {
-      text-align: center;
-      color: #333;
-    }
-    .chat-box {
-      max-width: 600px;
-      margin: 0 auto;
-      background: white;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-    .messages {
-      height: 300px;
-      overflow-y: auto;
-      border: 1px solid #ddd;
-      padding: 10px;
-      margin-bottom: 15px;
-      background: #fafafa;
-    }
-    .message {
-      margin: 10px 0;
-    }
-    .user { color: #007bff; }
-    .bot { color: #28a745; }
-    button {
-      padding: 10px 20px;
-      font-size: 16px;
-      background: #007bff;
-      color: white;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-    }
-    button:disabled {
-      background: #ccc;
-    }
-  </style>
-</head>
-<body>
-  <h1>🗣️ Tamil Voice AI Chat</h1>
-  <div class="chat-box">
-    <div class="messages" id="messages"></div>
-    <button id="startBtn">🎙️ பேச தொடங்கு</button>
-  </div>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Tamil Voice  Schemes </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <script>
-    const API_KEY = "103a7289888c3de65bede92e1f8a3806a057b72a0c552825669901d4819e0d4b";
-    const startBtn = document.getElementById("startBtn");
-    const messagesDiv = document.getElementById("messages");
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
 
-    // Function to display message
-    function addMessage(sender, text) {
-      const p = document.createElement("p");
-      p.classList.add("message");
-      p.innerHTML = `<strong class="${sender === '🧑' ? 'user' : 'bot'}">${sender}:</strong> ${text}`;
-      messagesDiv.appendChild(p);
-      messagesDiv.scrollTop = messagesDiv.scrollHeight;
-    }
+    <!-- Link to external CSS -->
+    <link rel="stylesheet" href="styles.css" />
 
-    // Function to speak Tamil response
-    function speak(text) {
-      const utterance = new SpeechSynthesisUtterance(text);
-      utterance.lang = 'ta-IN';
-      const voices = window.speechSynthesis.getVoices();
-      const tamilVoice = voices.find(voice => voice.lang.includes('ta'));
-      if (tamilVoice) utterance.voice = tamilVoice;
-      window.speechSynthesis.cancel(); // stop existing
-      window.speechSynthesis.speak(utterance);
-    }
+    <!-- React & Babel -->
+    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+  </head>
 
-    // Function to send text to Together AI
-    async function sendToAI(text) {
-      addMessage("🧑", text);
-      addMessage("🤖", "⏳ பதிலை பெறுகிறேன்...");
+  <body>
+    <div id="root"></div>
 
-      const response = await fetch("https://api.together.xyz/v1/chat/completions", {
-        method: "POST",
-        headers: {
-          "Authorization": `Bearer ${API_KEY}`,
-          "Content-Type": "application/json"
-        },
-        body: JSON.stringify({
-          model: "deepseek-ai/DeepSeek-V3",
-          messages: [
-            {
-              role: "system",
-              content: "நீங்கள் தமிழ் உதவியாளர். எப்போதும் தமிழில் மட்டும் பதிலளிக்கவும். பதில் எளிமையாகவும் பேச்சு மொழியில் இருக்க வேண்டும்."
+    <!-- Bootstrap JS Bundle -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script type="text/babel">
+      const SAMBANOVA_KEY = "b83fd8b0-19ea-4af6-bb47-16587ceb3c0a";
+
+      function VoiceChat() {
+        const [userText, setUserText] = React.useState("");
+        const [aiResponse, setAiResponse] = React.useState("🤖 AI பதில் காத்திருக்கிறது...");
+        const [isRecording, setIsRecording] = React.useState(false);
+        const [recordingText, setRecordingText] = React.useState("");
+
+        // Sends the input text to the API and sets the AI response.
+        const handleTextSubmit = async (text) => {
+          const query = text || userText;
+          if (!query.trim()) return;
+          setAiResponse("⏳ பதிலை பெற முயற்சிக்கிறது...");
+          const result = await fetch("https://api.sambanova.ai/v1/chat/completions", {
+            method: "POST",
+            headers: {
+              Authorization: `Bearer ${SAMBANOVA_KEY}`,
+              "Content-Type": "application/json",
             },
-            {
-              role: "user",
-              content: text
-            }
-          ]
-        })
-      });
+            body: JSON.stringify({
+              stream: false,
+              model: "DeepSeek-V3-0324",
+              messages: [
+                {
+                  role: "system",
+                  content:
+                    "நீங்கள் தமிழ் உதவியாளர். எப்போதும் தமிழில் மட்டும் பதிலளிக்கவும். எந்த சிறப்பு எழுத்துக்களும் பயன்படுத்த வேண்டாம். பதில் எளிமையாகவும், சுருக்கமாகவும் இருக்க வேண்டும். பேச்சு மொழியில் பதிலளிக்கவும்.",
+                },
+                { role: "user", content: query },
+              ],
+            }),
+          });
+          const data = await result.json();
+          if (data.choices && data.choices.length > 0) {
+            const responseText = data.choices[0].message.content
+              .replace(/[^\u0B80-\u0BFF\s]/g, "")
+              .trim();
+            setAiResponse("🤖 AI பதில்: " + responseText);
+            speakTamil(responseText);
+          } else {
+            setAiResponse("❌ பதிலை பெற முடியவில்லை.");
+          }
+        };
 
-      const data = await response.json();
-      const reply = data.choices?.[0]?.message?.content?.trim() || "❌ பதில் வரவில்லை.";
-      messagesDiv.lastChild.remove(); // remove loading
-      addMessage("🤖", reply);
-      speak(reply);
-    }
+        // Uses speechSynthesis to speak the AI response.
+        const speakTamil = (text) => {
+          if ("speechSynthesis" in window) {
+            const voices = window.speechSynthesis.getVoices();
+            const tamilVoice = voices.find((v) => v.lang.includes("ta"));
+            const utterance = new SpeechSynthesisUtterance(text);
+            utterance.lang = "ta-IN";
+            utterance.voice = tamilVoice || null;
+            utterance.rate = 1;
+            window.speechSynthesis.cancel();
+            window.speechSynthesis.speak(utterance);
+          } else {
+            alert("உங்கள் உலாவியில் உரை பேசும் வசதி இல்லை.");
+          }
+        };
 
-    // Start voice recognition
-    function startListening() {
-      const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
-      if (!SpeechRecognition) {
-        alert("உங்கள் உலாவி Speech Recognition-ஐ ஆதரிக்கவில்லை.");
-        return;
+        // Starts speech recognition which automatically stops when speech finishes.
+        const startVoiceRecognition = () => {
+          const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
+          if (!SpeechRecognition) {
+            alert("உங்கள் உலாவி Speech Recognition-ஐ ஆதரிக்கவில்லை.");
+            return;
+          }
+          setIsRecording(true);
+          setRecordingText("🎤 பதிவு நடைபெறுகிறது...");
+
+          const recognition = new SpeechRecognition();
+          recognition.lang = "ta-IN";
+          recognition.interimResults = false;
+          recognition.maxAlternatives = 1;
+          recognition.continuous = false;  // Auto-stops after speech finishes
+
+          recognition.onresult = (event) => {
+            const transcript = event.results[0][0].transcript;
+            setUserText(transcript);
+            handleTextSubmit(transcript); // Auto-send to AI after speech ends
+          };
+
+          recognition.onerror = (event) => {
+            setAiResponse("❌ உரையை அடையாளம் காண இயலவில்லை.");
+            console.error("Speech recognition error:", event.error);
+          };
+
+          recognition.onend = () => {
+            setIsRecording(false);
+            setRecordingText("");
+          };
+
+          recognition.start();
+        };
+
+        return (
+          <div className="voice-chat">
+            <h1>🗣️ Tamil AI Scheme Apply</h1>
+            <input
+              type="text"
+              placeholder="உங்கள் கேள்வியை உள்ளிடவும்"
+              value={userText}
+              onChange={(e) => setUserText(e.target.value)}
+            />
+            <div className="button-group">
+              <button onClick={() => handleTextSubmit()}>📝 பதில் பெற</button>
+              <button onClick={startVoiceRecognition} disabled={isRecording}>
+                🎙️ பதிவு செய்
+              </button>
+            </div>
+            {recordingText && <div className="recording-text">{recordingText}</div>}
+            <div className="response-box">
+              <p>{aiResponse}</p>
+            </div>
+          </div>
+        );
       }
 
-      const recognition = new SpeechRecognition();
-      recognition.lang = "ta-IN";
-      recognition.interimResults = false;
-      recognition.maxAlternatives = 1;
+      function SchemeGrid() {
+        const schemes = [
+          { name: "பசுமை திட்டம்", image: "images/agree.jpg" },
+          { name: "அரசு வேலைவாய்ப்பு", image: "images/job.jpg" },
+          { name: "மருத்துவ உதவி", image: "images/medical.jpg" },
+          { name: "பெண்கள் பாதுகாப்பு", image: "images/women.jpg" },
+          { name: "கல்வி உதவி", image: "images/education.jpg" },
+          { name: "விவசாய உதவி", image: "images/agree.jpg" },
+        ];
 
-      recognition.onstart = () => {
-        startBtn.disabled = true;
-        startBtn.textContent = "🎧 பதிவு நடைபெறுகிறது...";
-      };
+        const handleClick = (schemeName) => {
+          window.location.href = "home.html";
+        };
 
-      recognition.onresult = (event) => {
-        const spokenText = event.results[0][0].transcript;
-        sendToAI(spokenText);
-      };
+        return (
+          <div className="scheme-grid">
+            <h1>📜 அரசு திட்டங்கள்</h1>
+            <div className="grid-container">
+              {schemes.map((scheme, index) => (
+                <div
+                  key={index}
+                  className="scheme-card"
+                  onClick={() => handleClick(scheme.name)}
+                >
+                  <img src={scheme.image} alt={scheme.name} className="scheme-image" />
+                  <div className="scheme-overlay">{scheme.name}</div>
+                </div>
+              ))}
+            </div>
+          </div>
+        );
+      }
 
-      recognition.onerror = (event) => {
-        alert("பிழை: " + event.error);
-      };
+      function App() {
+        return (
+          <div>
+            <VoiceChat />
+            <hr />
+            <SchemeGrid />
+          </div>
+        );
+      }
 
-      recognition.onend = () => {
-        startBtn.disabled = false;
-        startBtn.textContent = "🎙️ பேச தொடங்கு";
-      };
-
-      recognition.start();
-    }
-
-    startBtn.addEventListener("click", startListening);
-
-    // preload voices
-    window.speechSynthesis.onvoiceschanged = () => {};
-  </script>
-</body>
+      ReactDOM.createRoot(document.getElementById("root")).render(<App />);
+    </script>
+  </body>
 </html>
